--- a/QuickWatermarkTool/Views/MainWindow.xaml
+++ b/QuickWatermarkTool/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         x:Class="QuickWatermarkTool.Views.MainWindow"
         Icon="/Assets/qwt-icon.ico"
-        Title="Quick Watermark Tool" Width="800" Height="400">
+        Title="Dxpress Watermark Tool" Width="800" Height="400">
 
   <Grid>
     <Grid.RowDefinitions>
@@ -25,7 +25,9 @@
       <Button Content="Add Image" Command="{Binding ImportImage}" FontSize="16" Margin="0,0,10,0" Grid.Column="0" VerticalAlignment="Center"/>
       <Button Content="Saving Folder" Command="{Binding SelectSavingFolder}" FontSize="16" Margin="0,0,10,0" Grid.Column="1" VerticalAlignment="Center"/>
       <TextBlock Text="{Binding SavingPath}" FontSize="16" Grid.Column="2"  VerticalAlignment="Center" />
+      <!--
       <Button Content="Settings" Command="{Binding LoadSettingWindow}" FontSize="16" Margin="0,0,10,0" Grid.Column="3" VerticalAlignment="Center"/>
+      -->
     </Grid>
     
     <DataGrid Items="{Binding Photos}"  Grid.Row="1" FontSize="14" Margin="10,10,10,10" ScrollViewer.VerticalScrollBarVisibility="Auto" CanUserResizeColumns="True" CanUserSortColumns="True" IsReadOnly="True">
